--- a/config/tiptilt.ini
+++ b/config/tiptilt.ini
@@ -1,6 +1,6 @@
-SERIALNUM_TIPTILT = 117054300
-#SERIALNUM_CONTROLLER = 119011638
-SERIALNUM_CONTROLLER = 119017529
+SN_TIPTILT = 117054300
+#SN_CONTROLLER = 119011638 # number on the box
+SN_CONTROLLER = 119017529 # number queried from device
 STEPS_PER_ARCSEC = 1
 THETA = 0.0
 FLIP = False
