first draft of tres.py (untested and not working)

--- a/config/calstage.ini
+++ b/config/calstage.ini
@@ -1,6 +1,7 @@
 SCIENCEPOS = 0
-
 SKYPOS = 10
-
 OUTPOS = 20
 SNCONTROLLER = 0019550256
+SNCALSTAGE = 000
+MODELCONTROLLER = C-663
+MODELSTAGE = L-505
