--- a/config/tiptilt.ini
+++ b/config/tiptilt.ini
@@ -1,6 +1,8 @@
 SN_TIPTILT = 117054300
 #SN_CONTROLLER = 119011638 # number on the box
 SN_CONTROLLER = 119017529 # number queried from device
+MODEL_TIPTILT = S340
+MODEL_CONTROLLER = E-518
 STEPS_PER_ARCSEC = 1
 THETA = 0.0
 FLIP = False
