add simulator for calstage and star field

--- a/config/zyla.ini
+++ b/config/zyla.ini
@@ -3,3 +3,16 @@ GAIN = 1 # placeholder (dynamic!?)
 MODEL = 'Zyla-4.2P-USB3'
 SN = 'VSC-11127'
 DATAPATH='/home/tres/data/'
+XSCIFIB = 1024
+YSCIFIB = 1050
+XSKYFIB = 1024
+YSKYFIB = 1550
+KPx = 0.5
+KIx = 0.1
+KDx = 0.0
+KPy = 0.5
+KIy = 0.1
+KDy = 0.0
+Dband = 0.0
+Imax = 0.3
+Corr_max = 2000
