--- a/config/star_projector.ini
+++ b/config/star_projector.ini
@@ -1,7 +1,7 @@
 # Define serial port on each computer
-#PORT = COM7 # on JASON-Think
+PORT = COM7 # on JASON-Think
 #PORT = /dev/ttyUSB0 # on tres-guider (guess)
-PORT = COM4 # on DTHINK (Joe's computer)
+#PORT = COM4 # on DTHINK (Joe's computer)
 
 # Translate stepper motor steps to physical motion
 # These came from mmirsstar.tcl. Not sure where they got them
@@ -19,3 +19,8 @@ MIN_X = 0.0
 MIN_Y = 0.0
 MAX_X = 13.0
 MAX_Y = 13.0
+
+# translate from X/Y to North/East
+THETA = 0.0 # the angle between +X on the stage and +North, in degrees
+FLIP = False # is there a flip required to translate between XY and North/East?
+#NOTE: anything but "True" will be registered as false (no flip). This will flip East/West (Y)
