--- a/config/zyla.ini
+++ b/config/zyla.ini
@@ -3,6 +3,8 @@ GAIN = 1 # placeholder (dynamic!?)
 MODEL = 'Zyla-4.2P-USB3'
 SN = 'VSC-11127'
 DATAPATH='/home/tres/data/'
+XPIX = 2048
+YPIX = 2048
 XSCIFIB = 1024
 YSCIFIB = 1050
 XSKYFIB = 1024
@@ -16,3 +18,5 @@ KDy = 0.0
 Dband = 0.0
 Imax = 0.3
 Corr_max = 2000
+REDIS_SERVER='localhost'
+REDIS_PORT=6379
