--- a/config/star_projector.ini
+++ b/config/star_projector.ini
@@ -1,6 +1,6 @@
 # Define serial port on each computer
-PORT = COM7 # on JASON-Think
-#PORT = /dev/ttyUSB0 # on tres-guider (guess)
+#PORT = COM7 # on JASON-Think
+PORT = /dev/ttyUSB1 # on tres-guider (guess)
 #PORT = COM4 # on DTHINK (Joe's computer)
 
 # Translate stepper motor steps to physical motion
