take advantage of new udev rule for static USB assignment

--- a/config/star_projector.ini
+++ b/config/star_projector.ini
@@ -1,6 +1,7 @@
 # Define serial port on each computer
 #PORT = COM7 # on JASON-Think
-PORT = /dev/ttyUSB1 # on tres-guider (guess)
+#PORT = /dev/ttyUSB1 # on tres-guider (guess)
+PORT = /dev/star_projector # on tres-guider (defined by rule in /etc/udev/rules.d/99-usb.serial.rules)
 #PORT = COM4 # on DTHINK (Joe's computer)
 
 # Translate stepper motor steps to physical motion
