--- a/config/calstage.ini
+++ b/config/calstage.ini
@@ -5,4 +5,4 @@ SNCONTROLLER = 0019550256
 SNCALSTAGE = 000
 MODELCONTROLLER = C-663
 MODEL = L-505
-PORT = '/dev/ttyUSB0'
+PORT = '/dev/calstage' # defined in /etc/udev/rules.d/99-usb-serial.rules
