closed loop guiding works

--- a/config/tiptilt.ini
+++ b/config/tiptilt.ini
@@ -3,8 +3,16 @@ SN_TIPTILT = 117054300
 SN_CONTROLLER = 119017529 # number queried from device
 MODEL_TIPTILT = S340
 MODEL_CONTROLLER = E-518
-STEPS_PER_ARCSEC = 1
-THETA = 0.0
-FLIP = False
+### calibrated using calibrate_tiptilt.py and fit.pro ###
+#using middle star
+STEPS_PER_PIXEL_TIP = 0.01275702779 # 78.388165
+STEPS_PER_PIXEL_TILT = 0.0186351879 # 53.661922
+THETA = 90.5917664643 # degrees (1.5811246 rad)
+#using edge star
+#STEPS_PER_PIXEL_TIP = 0.01281566373 # 78.029513
+#STEPS_PER_PIXEL_TILT = 0.01803193249 # 55.457173
+#THETA = 1.5779585
+FLIP = True
+#########################################################
 REDIS_SERVER='localhost'
 REDIS_PORT=6379
