--- a/config/zyla.ini
+++ b/config/zyla.ini
@@ -1,14 +1,18 @@
-PLATESCALE = 0.161 # from sagi's 11/19/2018 email
+PLATESCALE = 0.161 # "/pixel, from sagi's 11/19/2018 email
 GAIN = 1 # placeholder (dynamic!?)
 MODEL = 'Zyla-4.2P-USB3'
 SN = 'VSC-11127'
 DATAPATH='/home/tres/data/'
 XPIX = 2048
 YPIX = 2048
-XSCIFIB = 1024
-YSCIFIB = 1050
-XSKYFIB = 1024
-YSKYFIB = 1550
+# these are the rough values for the science fiber position
+XSCIFIB = 970
+YSCIFIB = 958
+# these are intentionally offset for testing
+#XSCIFIB = 870
+#YSCIFIB = 858
+XSKYFIB = 593
+YSKYFIB = 960
 KPx = 0.5
 KIx = 0.1
 KDx = 0.0
