add tiptilt calibration code

--- a/config/tiptilt.ini
+++ b/config/tiptilt.ini
@@ -3,16 +3,16 @@ SN_TIPTILT = 117054300
 SN_CONTROLLER = 119017529 # number queried from device
 MODEL_TIPTILT = S340
 MODEL_CONTROLLER = E-518
-### calibrated using calibrate_tiptilt.py and fit.pro ###
-#using middle star
-STEPS_PER_PIXEL_TIP = 0.01275702779 # 78.388165
-STEPS_PER_PIXEL_TILT = 0.0186351879 # 53.661922
-THETA = 90.5917664643 # degrees (1.5811246 rad)
-#using edge star
-#STEPS_PER_PIXEL_TIP = 0.01281566373 # 78.029513
-#STEPS_PER_PIXEL_TILT = 0.01803193249 # 55.457173
-#THETA = 1.5779585
+##### measured using calibrate_tiptilt.py on 2021-08-10 #####
 FLIP = True
-#########################################################
+#using middle star
+STEPS_PER_PIXEL_TIP  = 0.01276
+STEPS_PER_PIXEL_TILT = 0.01864
+THETA = 90.59 # degrees
+#using edge star
+#STEPS_PER_PIXEL_TIP = 0.01281566373
+#STEPS_PER_PIXEL_TILT = 0.01803193249
+#THETA = 90.41 # degrees
+##############################################################
 REDIS_SERVER='localhost'
 REDIS_PORT=6379
